[FEAT] Aggiunta gestione autorevole delle pedine virtuali
Aggiunte persistenza, creazione e consultazione protetta delle pedine virtuali associate a personaggi e partecipanti.

Integrata l'occupazione delle pedine nella griglia e aggiornati vincoli, test, comandi just e contratti.
