# services/event-service/src/main/java/it/uniupo/boardhub/eventservice/controller/dto/CreateSessionPieceRequest.java
@@ -1,0 +1,10 @@
+package it.uniupo.boardhub.eventservice.controller.dto;
+
+import java.util.UUID;
+
+public record CreateSessionPieceRequest(
+        UUID characterId,
+        String representationMode,
+        String startCell
+) {
+}
