# services/event-service/src/main/java/it/uniupo/boardhub/eventservice/model/piece/RepresentationMode.java
@@ -1,0 +1,5 @@
+package it.uniupo.boardhub.eventservice.model.piece;
+
+public enum RepresentationMode {
+    VIRTUAL
+}
